--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "webvr",
+  "homepage": "https://mohammadrezaaalaei.github.io/webvr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +17,7 @@
     "@react-three/fiber": "^8.13.5",
     "@react-three/xr": "^5.6.1",
     "@types/three": "^0.154.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-xr": "^1.1.0",
